// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactBookForm /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="form card"
  >
    <div
      class="card-body"
    >
      <form
        class=""
        data-testid="contact-book-form"
      >
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.name
          </label>
          <input
            class="form-control"
            maxlength="20"
            minlength="4"
            placeholder="test.name"
            required=""
            type="text"
            value="test"
          />
        </div>
        <div
          class="d-flex justify-content-between"
        >
          <button
            class="w-100 btn btn-secondary"
            data-testid="contact-book-back-btn"
            type="button"
          >
            test.back
          </button>
          <button
            class="w-100 ms-2 btn btn-primary"
            type="submit"
          >
            test.submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ContactBookForm /> show errors correctly: errors 1`] = `
<DocumentFragment>
  <div
    class="form card"
  >
    <div
      class="card-body"
    >
      <form
        class=""
        data-testid="contact-book-form"
      >
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.name
          </label>
          <input
            class="form-control"
            maxlength="20"
            minlength="4"
            placeholder="test.name"
            required=""
            type="text"
            value="test"
          />
          <div
            class="text-danger mt-2 mb-0"
            data-testid="error-box-name"
          >
            <span>
              errors.test
            </span>
          </div>
        </div>
        <div
          class="d-flex justify-content-between"
        >
          <button
            class="w-100 btn btn-secondary"
            data-testid="contact-book-back-btn"
            type="button"
          >
            test.back
          </button>
          <button
            class="w-100 ms-2 btn btn-primary"
            type="submit"
          >
            test.submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
